# Anny-body-fitter

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  TESTING_COMPLETE_SUMMARY.md  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README.md  bottleneck_analyzer.py  performance_profiler.py  run_all_benchmarks.sh
docs/: API_IMPLEMENTATION_SUMMARY.md  API_README.md  END_TO_END_TESTING_COMPLETE.md  FILES_CREATED.md  PARAMETER_ESTIMATION_SUMMARY.md  PROJECT_SUMMARY.md  QUALITY_ASSESSMENT_SUMMARY.md  TEST_REPORT.md  code-review.md  database_schema.md  database_setup.md  development-guide.md  frontend_api.md  frontend_development.md  frontend_guide.md  parameter_estimation_usage.md  performance-report.md  vision-research.md
docs/architecture/adr/: 001-technology-stack-selection.md  002-privacy-preserving-photo-handling.md  003-vision-to-phenotype-mapping-strategy.md
docs/architecture/diagrams/: c4-context.md  sequence-photo-to-model.md
docs/architecture/specifications/: 01-sparc-specification.md  02-architecture-design.md
docs/security/: GDPR_COMPLIANCE.md  IMPLEMENTATION_SUMMARY.md  SECURITY_REVIEW.md  privacy-policy.md  threat-model.md
docs/vision/: IMPLEMENTATION_SUMMARY.md  README.md  examples.md  quick_start.py
scripts/: run_frontend.sh  verify_quality_setup.sh
src/anny/vision/: __init__.py  image_preprocessing.py  landmark_detector.py  measurement_extractor.py  multi_view_fusion.py
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  auth.py  rate_limit.py
src/api/routes/: __init__.py  fitting.py  subjects.py
src/api/schemas/: __init__.py  fitting.py  metrics.py  photo.py  subject.py
src/api/services/: __init__.py  database.py  fitting_service.py  metrics_service.py  photo_service.py  subject_service.py
src/database/: __init__.py  connection.py  crud.py  models.py  schemas.py
src/fitting/: README.md  __init__.py  confidence_weighting.py  measurement_to_phenotype.py  parameter_optimizer.py
src/frontend/: README.md  __init__.py  app.py
src/frontend/components/: measurement_display.py  model_viewer.py  photo_upload.py  progress_tracker.py  subject_form.py
src/frontend/utils/: __init__.py  state_manager.py
src/security/: __init__.py  encryption.py  file_scanner.py  temp_storage.py  validators.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  test_database.py
tests/fixtures/: README.md  __init__.py  expected_results.json  generate_test_images.py  sample_data.json  sample_images.py  test_data.py  test_images.py
tests/integration/: test_api_integration.py  test_complete_workflow.py  test_database_integration.py  test_end_to_end_fitting.py  test_fitting_pipeline.py  test_vision_pipeline.py
tests/mocks/: __init__.py  mock_vision.py
tests/security/: test_encryption.py  test_validators.py
tests/test_api/: conftest.py  test_fitting.py  test_health.py  test_subjects.py
tests/test_fitting/: __init__.py  test_integration.py  test_measurement_to_phenotype.py
tests/test_frontend/: test_app.py  test_components.py
tests/test_vision/: __init__.py  test_image_preprocessing.py  test_landmark_detector.py  test_measurement_extractor.py  test_multi_view_fusion.py
tests/unit/: test_anthropometry.py  test_model_integration.py  test_parameters_regressor.py
